The Change Log for FloatCanvas.

-8/27/07

* Added PieChart object to floatcanvas/SpecialObjects, and a deom of it in Demos.
  Thanks for Tim Ansel for writing the first version
  
* fixed a bug so that in _ResetBoundingBox, if the overall bounding box
has no width or height, the BB is set to None.

* Added a Arc object to FloatCanvas.

-7/17/07

* added a few new features to the BBox object.

* added a Bind() method to the Group Object -- it captures events on all
the objects in the groupo, and returns the group object.

* Added a new demo -- Tree.py. It shows how to make an editable
hierarchical tree with FloatCanvas.

-4/30/2007

* Replaced most (all?) of the BoundingBox code in FloatCanvas.py with
calls to the BBox module.

* Changed font code to calculate a font scaling by checking to see how
many pixels tall a "X" is. This scaling is used to compute form sizes
form teh pixel sizes used internally by FloatCanvas. This should make
fonts the same pixel size on all machines.

I tried to use wx.FontFromPixelSize(), but on MS-Windows you need to
specify a width too, and even though I found a width/height ratio that
was OK, I think all letter were getting stretched and didn't look to
good. Man, this is harder than it should be!

-4/09/2007

* fixed hit-test bug on OS-X! This required a bit of a re-factor, but it
works now.

* A bunch of merging of changes into the SVN version Christian set up

* Changed the keyword "underline" to "underlined" everywhere in the
various font code.  -- there was a mixture before.

3/06/2007 * Update for wxPython 2.8.1 - Added a hack to get around
toolbar bug with 2.8.1 on OS-X -

-2/13/2007

* Fixed a bug where GUI.UpdateScreen was called on None.

* Fixed a bug in Demos/MouseTest.py -- GUIMode can't be imported until
after a wx.App is created.


*****Release 0.9.17*****

-1/19/2007 * Only fully tested and working with wxPython2.6

* Tested with wxPython 2.8 on OS-X: Hit-testing doesn't work, I expect